--- a/LensOverTea.cabal
+++ b/LensOverTea.cabal
@@ -18,3 +18,10 @@ executable LensOverTea
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , LensOverTea
+
+library
+  hs-source-dirs: src
+  exposed-modules: LensPt1, LensPt2
+  build-depends: base >= 4.7 && < 5
+  default-language: Haskell2010
